--- a/applied stats (2023).tex
+++ b/applied stats (2023).tex
@@ -108,9 +108,10 @@
 \newpage
 \include{topics/cavi.tex}
 \newpage 
+\include{topics/PCA.tex}
+\newpage 
 
-
-%% Solutions
+% Solutions
 \include{solutions/applied_2011.tex}
 \newpage 
 \include{solutions/applied_2012.tex}
@@ -126,6 +127,8 @@
 \include{solutions/applied_2017.tex}
 \newpage
 \include{solutions/applied_2018.tex}
+\newpage
+\include{solutions/applied_2019.tex}
 
 \bibliographystyle{plainnat}
 \bibliography{references.bib}
