write 2023 problem 1 solution

--- a/applied stats (2023).tex
+++ b/applied stats (2023).tex
@@ -111,7 +111,8 @@
 \include{topics/PCA.tex}
 \newpage 
 
-% Solutions
+
+Solutions
 \include{solutions/applied_2011.tex}
 \newpage 
 \include{solutions/applied_2012.tex}
@@ -129,6 +130,12 @@
 \include{solutions/applied_2018.tex}
 \newpage
 \include{solutions/applied_2019.tex}
+% \newpage
+% \include{solutions/applied_2020.tex}
+% \newpage
+% \include{solutions/applied_2021.tex}
+% \newpage
+% \include{solutions/applied_2022.tex}
 
 \bibliographystyle{plainnat}
 \bibliography{references.bib}
