--- a/solutions/applied_2019.tex
+++ b/solutions/applied_2019.tex
@@ -1,4 +1,4 @@
-\section{Applied 2019: Solution\footnote{Nikos Ignatiadis and D.K.}}
+\section{Applied 2019: Solution\footnote{Nikos Ignatiadis and Dan Kluger}}
 
 
 
