fix typos in PCA.tex

--- a/applied stats (2023).tex
+++ b/applied stats (2023).tex
@@ -109,10 +109,9 @@
 \include{topics/cavi.tex}
 \newpage 
 \include{topics/PCA.tex}
-\newpage 
 
 
-Solutions
+%Solutions
 \include{solutions/applied_2011.tex}
 \newpage 
 \include{solutions/applied_2012.tex}
