--- a/applied stats (2023).tex
+++ b/applied stats (2023).tex
@@ -87,7 +87,7 @@
 \tableofcontents
 \newpage
 
-%% Topics
+% Topics
 \include{topics/schedule.tex}
 \newpage
 \include{topics/overview.tex}
@@ -134,7 +134,7 @@
 % \newpage
 % \include{solutions/applied_2021.tex}
 % \newpage
-% \include{solutions/applied_2022.tex}
+%\include{solutions/applied_2022.tex}
 
 \bibliographystyle{plainnat}
 \bibliography{references.bib}
