add sols to 2022 Q2

--- a/applied stats (2023).tex
+++ b/applied stats (2023).tex
@@ -87,54 +87,54 @@
 \tableofcontents
 \newpage
 
-% Topics
-\include{topics/schedule.tex}
-\newpage
-\include{topics/overview.tex}
-\newpage 
-\include{topics/linear_models.tex}
-\newpage 
-\include{topics/glms.tex}
-\newpage 
-\include{topics/bootstrap.tex}
-\newpage
-\include{topics/EM.tex}
-\newpage
-\include{topics/cross_validation.tex}
-\newpage 
-\include{topics/linear_model_extra.tex}
-\newpage 
-\include{topics/bayesian_models.tex}
-\newpage
-\include{topics/cavi.tex}
-\newpage 
-\include{topics/PCA.tex}
+% % Topics
+% \include{topics/schedule.tex}
+% \newpage
+% \include{topics/overview.tex}
+% \newpage 
+% \include{topics/linear_models.tex}
+% \newpage 
+% \include{topics/glms.tex}
+% \newpage 
+% \include{topics/bootstrap.tex}
+% \newpage
+% \include{topics/EM.tex}
+% \newpage
+% \include{topics/cross_validation.tex}
+% \newpage 
+% \include{topics/linear_model_extra.tex}
+% \newpage 
+% \include{topics/bayesian_models.tex}
+% \newpage
+% \include{topics/cavi.tex}
+% \newpage 
+% \include{topics/PCA.tex}
 
 
-%Solutions
-\include{solutions/applied_2011.tex}
-\newpage 
-\include{solutions/applied_2012.tex}
-\newpage
-\include{solutions/applied_2013.tex}
-\newpage
-\include{solutions/applied_2014.tex}
-\newpage 
-\include{solutions/applied_2015.tex}
-\newpage
-\include{solutions/applied_2016.tex}
-\newpage 
-\include{solutions/applied_2017.tex}
-\newpage
-\include{solutions/applied_2018.tex}
-\newpage
-\include{solutions/applied_2019.tex}
+% % Solutions
+% \include{solutions/applied_2011.tex}
+% \newpage 
+% \include{solutions/applied_2012.tex}
+% \newpage
+% \include{solutions/applied_2013.tex}
+% \newpage
+% \include{solutions/applied_2014.tex}
+% \newpage 
+% \include{solutions/applied_2015.tex}
+% \newpage
+% \include{solutions/applied_2016.tex}
+% \newpage 
+% \include{solutions/applied_2017.tex}
+% \newpage
+% \include{solutions/applied_2018.tex}
+% \newpage
+% \include{solutions/applied_2019.tex}
 % \newpage
 % \include{solutions/applied_2020.tex}
 % \newpage
 % \include{solutions/applied_2021.tex}
 % \newpage
-%\include{solutions/applied_2022.tex}
+\include{solutions/applied_2022.tex}
 
 \bibliographystyle{plainnat}
 \bibliography{references.bib}
