work on survival analysis

--- a/applied stats (2023).tex
+++ b/applied stats (2023).tex
@@ -109,7 +109,8 @@
 % \include{topics/cavi.tex}
 % \newpage 
 % \include{topics/PCA.tex}
-
+\newpage
+\include{topics/survival_analysis.tex}
 
 % % Solutions
 % \include{solutions/applied_2011.tex}
@@ -134,7 +135,7 @@
 % \newpage
 % \include{solutions/applied_2021.tex}
 % \newpage
-\include{solutions/applied_2022.tex}
+% \include{solutions/applied_2022.tex}
 
 \bibliographystyle{plainnat}
 \bibliography{references.bib}
