--- a/references.bib
+++ b/references.bib
@@ -590,5 +590,6 @@ year = {1996},
 doi = {10.1214/ss/1032280214},
 URL = {https://doi.org/10.1214/ss/1032280214}
 }
+@book{efron_2022, place={Cambridge}, series={Institute of Mathematical Statistics Textbooks}, title={Exponential Families in Theory and Practice}, DOI={10.1017/9781108773157}, publisher={Cambridge University Press}, author={Efron, Bradley}, year={2022}, collection={Institute of Mathematical Statistics Textbooks}}
 
 
